[package]
name = "rtb-rs"
version = "0.1.0"
authors = ["Alex Zywicki <alexander.zywicki@gmail.com>, Rob Saunders <rob@wearebrandnew.com>, Charles Saracco <crsaracco@gmail.com>, and others...(tbd)"]
edition = "2018"

[dependencies]
log = "0.4"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = [
    "libloaderapi",
    "winuser"
]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18.4"
objc = "0.2.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
xcb = { version = "0.8", features = ["thread"] }
